<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@drawable/arkaplan2">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/RegisterTitle"
        android:id="@+id/registerTitleTV"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/RegisterUsernameTV"
        android:id="@+id/registerUsernameTV"
        android:layout_marginTop="54dp"
        android:textSize="15sp"
        android:textStyle="italic"
        android:gravity="left"
        android:paddingStart="25dp"
        android:layout_below="@+id/registerTitleTV"
        />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/UsernameInputET"
        android:layout_below="@+id/registerUsernameTV"
        android:layout_centerHorizontal="true"
        android:paddingTop="20dp"
        android:hint="@string/RegisterUsernameHintTV" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="email"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:textStyle="italic"
        android:id="@+id/registertxt"
        android:gravity="left"
        android:paddingStart="25dp"
        android:layout_below="@+id/UsernameInputET"
        />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/registeremail"
        android:layout_below="@+id/registertxt"
        android:layout_centerHorizontal="true"
        android:paddingTop="20dp"
        android:hint="@string/ProfileEmailHintTV" />






    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/RegisterPasswordTV"
        android:id="@+id/registerPasswordTV"
        android:textSize="15sp"
        android:textStyle="italic"
        android:layout_below="@+id/registeremail"
        android:layout_alignStart="@+id/UsernameInputET"
        android:gravity="left"
        android:paddingLeft="3dp" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/PasswordET"
        android:layout_below="@+id/registerPasswordTV"
        android:layout_centerHorizontal="true"
        android:paddingTop="20dp"
        android:hint="@string/RegisterPasswordHintTV"
        android:password="true"
        tools:ignore="Deprecated" />


    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/PasswordET"
        android:layout_centerHorizontal="true"
        android:width="25dp"
        android:height="25dp"
        android:onClick="sign_up"
        android:text="Signup"
        android:textSize="13sp"
        tools:ignore="UsingOnClickInXml" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/RegisterShowPassCharsTV"
        android:id="@+id/showCharsTV"
        android:textStyle="italic"
        android:layout_alignTop="@+id/registerCharTB"
        android:layout_alignStart="@+id/PasswordET" />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New ToggleButton"
        android:id="@+id/registerCharTB"
        android:onClick="regCharTBEntered"
        android:textSize="10sp"
        android:textStyle="italic"
        android:layout_below="@+id/buttonRegister"
        android:layout_alignEnd="@+id/PasswordET"
        android:layout_marginTop="25dp"
        tools:ignore="SmallSp,UsingOnClickInXml" />

</RelativeLayout>